Correction in align of icons in pink grid

--- a/stylesheets/landing.css
+++ b/stylesheets/landing.css
@@ -2625,7 +2625,7 @@ a {
 }
 
 .grid__icons-steps{
-  padding-left: 0;
+  padding-left: 10px;
 }
 
 .grid__book-salon{
